@@ -29,6 +29,23 @@ specifier|public
 class|class
 name|Among
 block|{
+DECL|field|EMPTY_PARAMS
+specifier|private
+specifier|static
+specifier|final
+name|Class
+argument_list|<
+name|?
+argument_list|>
+index|[]
+name|EMPTY_PARAMS
+init|=
+operator|new
+name|Class
+index|[
+literal|0
+index|]
+decl_stmt|;
 DECL|method|Among
 specifier|public
 name|Among
@@ -119,11 +136,7 @@ name|getDeclaredMethod
 argument_list|(
 name|methodname
 argument_list|,
-operator|new
-name|Class
-index|[
-literal|0
-index|]
+name|EMPTY_PARAMS
 argument_list|)
 expr_stmt|;
 block|}
