@@ -50,7 +50,7 @@ name|RamUsageEstimator
 import|;
 end_import
 begin_comment
-comment|/**  * This is the rev 502 of the Snowball SVN trunk,  * but modified:  * made abstract and introduced abstract method stem to avoid expensive reflection in filter class.  * refactored StringBuffers to StringBuilder  * uses char[] as buffer instead of StringBuffer/StringBuilder  * eq_s,eq_s_b,insert,replace_s take CharSequence like eq_v and eq_v_b  */
+comment|/**  * This is the rev 502 of the Snowball SVN trunk,  * but modified:  * made abstract and introduced abstract method stem to avoid expensive reflection in filter class.  * refactored StringBuffers to StringBuilder  * uses char[] as buffer instead of StringBuffer/StringBuilder  * eq_s,eq_s_b,insert,replace_s take CharSequence like eq_v and eq_v_b  * reflection calls (Lovins, etc) use EMPTY_ARGS/EMPTY_PARAMS  */
 end_comment
 begin_class
 DECL|class|SnowballProgram
@@ -59,6 +59,20 @@ specifier|abstract
 class|class
 name|SnowballProgram
 block|{
+DECL|field|EMPTY_ARGS
+specifier|private
+specifier|static
+specifier|final
+name|Object
+index|[]
+name|EMPTY_ARGS
+init|=
+operator|new
+name|Object
+index|[
+literal|0
+index|]
+decl_stmt|;
 DECL|method|SnowballProgram
 specifier|protected
 name|SnowballProgram
@@ -1411,11 +1425,7 @@ name|w
 operator|.
 name|methodobject
 argument_list|,
-operator|new
-name|Object
-index|[
-literal|0
-index|]
+name|EMPTY_ARGS
 argument_list|)
 decl_stmt|;
 name|res
@@ -1773,11 +1783,7 @@ name|w
 operator|.
 name|methodobject
 argument_list|,
-operator|new
-name|Object
-index|[
-literal|0
-index|]
+name|EMPTY_ARGS
 argument_list|)
 decl_stmt|;
 name|res
